--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/icon.png" />
     <link rel="shortcut icon" type="image/png" href="/icon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Blip" />
     <meta name="msapplication-TileImage" content="/icon.png" />
     <meta name="msapplication-TileColor" content="#ff6b35" />
   </head>
