--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Blip 300m, Real-Time Vibes</title>
+    <title>Blipfree.com Official site | The fastest way to meet in real life</title>
     <link rel="icon" type="image/png" href="/icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/icon.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icon.png" />
